--- a/app/src/main/res/layout/activity_diary_map_n_pictures.xml
+++ b/app/src/main/res/layout/activity_diary_map_n_pictures.xml
@@ -191,4 +191,53 @@
         </android.support.constraint.ConstraintLayout>
     </android.support.constraint.ConstraintLayout>
 
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/diary_mapNpics_PictureEdit"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/diary_mapNpics_PictureEdit_Title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="사진 목록 편집"
+            app:layout_constraintBottom_toBottomOf="@id/diary_mapNpics_PictureEdit_Save"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.8" />
+
+        <Button
+            android:id="@+id/diary_mapNpics_PictureEdit_Save"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="완료"
+            app:layout_constraintBottom_toTopOf="@id/diary_mapNpics_PictureEdit_List"
+            app:layout_constraintLeft_toRightOf="@id/diary_mapNpics_PictureEdit_Title"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.2" />
+
+        <ListView
+            android:id="@+id/diary_mapNpics_PictureEdit_List"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:divider="#AAAAAA"
+            android:dividerHeight="1.5dp"
+            app:layout_constraintBottom_toTopOf="@id/diary_mapNpics_PictureEdit_Add"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_PictureEdit_Save"/>
+
+        <Button
+            android:id="@+id/diary_mapNpics_PictureEdit_Add"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="추가..."
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_PictureEdit_List" />
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
