--- a/app/src/main/res/layout/activity_diary_map_n_pictures.xml
+++ b/app/src/main/res/layout/activity_diary_map_n_pictures.xml
@@ -8,240 +8,105 @@
     tools:context=".diary.Diary_mapNPictures">
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/diary_mapNpics_View"
+        android:id="@+id/diary_mapNpics_MapFrame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
+        android:layout_height="0dp"
+        android:padding="10dp"
+        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/diary_mapNpics_MapFrame"
+            android:id="@+id/diary_mapNpics_TitleBox"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:padding="20dp"
-            app:layout_constraintHeight_percent="0.5"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            app:layout_constraintHeight_percent="0.15"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/diary_mapNpics_TitleBox"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:paddingStart="5dp"
-                android:paddingEnd="5dp"
-                app:layout_constraintHeight_percent="0.15"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:id="@+id/diary_mapNpics_TitleImage"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/diary"
-                    android:background="#00000000"
-                    android:scaleType="centerCrop"
-                    app:layout_constraintDimensionRatio="1:1"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <android.support.constraint.ConstraintLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:paddingLeft="10dp"
-                    app:layout_constraintLeft_toRightOf="@id/diary_mapNpics_TitleImage"
-                    app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_EditStart"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <TextView
-                        android:id="@+id/diary_mapNpics_ReadTitle"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Title"
-                        android:gravity="center_vertical"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <EditText
-                        android:id="@+id/diary_mapNpics_EditTitle"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:visibility="gone"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-                </android.support.constraint.ConstraintLayout>
-
-
-                <ImageButton
-                    android:id="@+id/diary_mapNpics_EditStart"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/pen"
-                    android:padding="5dp"
-                    android:scaleType="centerCrop"
-                    android:background="#00000000"
-                    android:visibility="visible"
-                    android:onClick="diary_onEditClick"
-                    app:layout_constraintDimensionRatio="1:1"
-                    app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_TitleLike"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageButton
-                    android:id="@+id/diary_mapNpics_TitleLike"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/heartgrey"
-                    android:background="#00000000"
-                    android:scaleType="centerCrop"
-                    android:onClick="diary_onLikeClick"
-                    app:layout_constraintDimensionRatio="1:1"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </android.support.constraint.ConstraintLayout>
-
-            <FrameLayout
-                android:id="@+id/diary_mapNpics_Map_Outer"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:padding="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_TitleBox">
-
-                <kr.ac.kw.coms.globealbum.map.MyMapView
-                    android:id="@+id/diary_mapNpics_Map"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </FrameLayout>
-
-        </android.support.constraint.ConstraintLayout>
-
-
-        <kr.ac.kw.coms.globealbum.album.GroupDiaryView
-            android:id="@+id/diary_mapNpics_Pics"
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            app:layout_constraintHeight_percent="0.15"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_MapFrame">
-
-        </kr.ac.kw.coms.globealbum.album.GroupDiaryView>
-
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/diary_mapNpics_Write"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:visibility="gone"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHeight_percent="0.35"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics">
-
-            <EditText
-                android:id="@+id/diary_mapNpics_EditBody"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:hint="내용"
-                app:layout_constraintBottom_toTopOf="@id/diary_mapNpics_EditSave"
+            <ImageView
+                android:id="@+id/diary_mapNpics_TitleImage"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/diary"
+                android:background="#00000000"
+                android:scaleType="centerCrop"
+                app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/diary_mapNpics_EditSave"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="diary_onSaveClick"
-                android:text="저장"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_EditCancel" />
-
-            <Button
-                android:id="@+id/diary_mapNpics_EditCancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="diary_onCancelClick"
-                android:text="취소"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
-
-        </android.support.constraint.ConstraintLayout>
-
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/diary_mapNpics_Read"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHeight_percent="0.35"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics">
 
             <TextView
-                android:id="@+id/diary_mapNpics_ReadBody"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:hint="내용"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginBottom="10dp"
+                android:id="@+id/diary_mapNpics_Title"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="Title"
+                android:gravity="center_vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/diary_mapNpics_TitleImage"
+                app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_EditStart"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/diary_mapNpics_EditStart"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/pen"
+                android:padding="5dp"
+                android:scaleType="centerCrop"
+                android:background="#00000000"
+                android:visibility="visible"
+                android:onClick="diary_onEditClick"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_TitleLike"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/diary_mapNpics_TitleLike"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/heartgrey"
+                android:background="#00000000"
+                android:scaleType="centerCrop"
+                android:onClick="diary_onLikeClick"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
-    </android.support.constraint.ConstraintLayout>
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/diary_mapNpics_PictureEdit"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/diary_mapNpics_PictureEdit_Title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="사진 목록 편집"
-            app:layout_constraintBottom_toBottomOf="@id/diary_mapNpics_PictureEdit_Save"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.8" />
-
-        <Button
-            android:id="@+id/diary_mapNpics_PictureEdit_Save"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="완료"
-            app:layout_constraintBottom_toTopOf="@id/diary_mapNpics_PictureEdit_List"
-            app:layout_constraintLeft_toRightOf="@id/diary_mapNpics_PictureEdit_Title"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.2" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/diary_mapNpics_PictureEdit_List"
+        <kr.ac.kw.coms.globealbum.map.MyMapView
+            android:id="@+id/diary_mapNpics_Map"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@id/diary_mapNpics_PictureEdit_Add"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_PictureEdit_Save"/>
-
-        <Button
-            android:id="@+id/diary_mapNpics_PictureEdit_Add"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="추가..."
+            android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_PictureEdit_List" />
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_TitleBox" />
+
     </android.support.constraint.ConstraintLayout>
+
+
+    <kr.ac.kw.coms.globealbum.album.GroupDiaryView
+        android:id="@+id/diary_mapNpics_Pics"
+        android:layout_width="0dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.15"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_MapFrame">
+
+    </kr.ac.kw.coms.globealbum.album.GroupDiaryView>
+
+    <TextView
+        android:id="@+id/diary_mapNpics_ReadBody"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:hint="내용"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
