--- a/app/src/main/res/layout/activity_diary_edit.xml
+++ b/app/src/main/res/layout/activity_diary_edit.xml
@@ -21,6 +21,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:background="#00000000"
+            android:onClick="diary_edit_onClick"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -70,7 +71,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_edit_listLabel">
+        app:layout_constraintTop_toBottomOf="@id/diary_edit_listLabel"
+        app:layout_constraintBottom_toTopOf="@id/diary_edit_DescriptionText">
 
     </android.support.v7.widget.RecyclerView>
     <EditText
@@ -78,7 +80,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.3"
-        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 </android.support.constraint.ConstraintLayout>
