--- a/app/src/main/res/layout/activity_diary_edit.xml
+++ b/app/src/main/res/layout/activity_diary_edit.xml
@@ -21,6 +21,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:background="#00000000"
+            android:src="@drawable/arrow_left"
+            android:scaleType="fitCenter"
             android:onClick="diary_edit_onClick"
             />
         <TextView
@@ -75,6 +77,16 @@
         app:layout_constraintBottom_toTopOf="@id/diary_edit_DescriptionText">
 
     </android.support.v7.widget.RecyclerView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/diary_edit_ImageList"
+        app:layout_constraintBottom_toTopOf="@id/diary_edit_DescriptionText"
+        android:background="#000000"
+        />
     <EditText
         android:id="@+id/diary_edit_DescriptionText"
         android:layout_width="match_parent"
