--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#AAD7F8"
     tools:context=".game.GameActivity">
-
 
     <android.support.constraint.Guideline
         android:id="@+id/guide_top"
@@ -26,6 +26,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/timer"
+        app:layout_constraintBottom_toTopOf="@id/map"
+        app:layout_constraintDimensionRatio="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <kr.ac.kw.coms.globealbum.map.MyMapView
         android:id="@+id/map"
         android:layout_width="0dp"
@@ -35,6 +44,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guide_top"
         tools:background="#aaa" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/white_bottom_gradient"
+        />
 
     <android.support.constraint.Guideline
         android:id="@+id/guide_mid"
