--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.1" />
+        app:layout_constraintGuide_percent="0.07" />
 
     <ProgressBar
         android:id="@+id/progressbar"
@@ -46,6 +46,8 @@
         tools:background="#aaa" />
 
     <View
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/white_bottom_gradient"
@@ -64,19 +66,32 @@
         android:layout_height="wrap_content"
         android:text="stage 1"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@id/textview_score"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toStartOf="@id/textview_target"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/map" />
 
+    <TextView
+        android:id="@+id/textview_target"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="target 3/3"
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/textview_stage"
+        app:layout_constraintEnd_toStartOf="@id/textview_score"
+        app:layout_constraintStart_toEndOf="@id/textview_stage"
+        app:layout_constraintTop_toBottomOf="@id/map" />
     <TextView
         android:id="@+id/textview_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="score : 0"
+        android:layout_marginTop="5dp"
         android:layout_below="@id/textview_stage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/textview_stage"
+        app:layout_constraintStart_toEndOf="@id/textview_target"
         app:layout_constraintTop_toBottomOf="@id/map" />
 
     <android.support.constraint.Placeholder
