--- a/app/src/main/res/layout/activity_diary_mine_main.xml
+++ b/app/src/main/res/layout/activity_diary_mine_main.xml
@@ -28,15 +28,19 @@
     </RelativeLayout>
 
     <ImageButton
+            android:id="@+id/diary_mine_main_NewDiary"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:translationZ="1px"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintHeight_percent="0.1"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/zoom_in"
-            android:layout_marginLeft="20dp"
-            android:layout_marginBottom="20dp"
+            android:scaleType="fitXY"
+            android:background="#00000000"
+            android:layout_marginBottom="50dp"
             android:onClick="diary_mine_main_AddNewDiary"
     />
 
