--- a/app/src/main/res/layout/activity_diary_mine_main.xml
+++ b/app/src/main/res/layout/activity_diary_mine_main.xml
@@ -41,6 +41,7 @@
             android:scaleType="fitXY"
             android:background="#00000000"
             android:layout_marginBottom="50dp"
+            android:visibility="invisible"
             android:onClick="diary_mine_main_AddNewDiary"
     />
 
