--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -5,12 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintLeft_toLeftOf="parent"
+          android:background="@drawable/login_background" />
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:text="GLOBE ALBUM"
+        android:layout_marginBottom="20dp"
+        android:text="Sign in with "
         android:textAlignment="center"
         android:textSize="15pt"
         app:layout_constraintBottom_toTopOf="@id/guide_top"
@@ -22,8 +28,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.35" />
+        app:layout_constraintGuide_percent="0.30" />
 
+    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+    android:src=""/>
     <EditText
         android:id="@+id/et_email"
         android:layout_width="wrap_content"
